--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,26 +1,28 @@
 name: pipeline
-  on:
-    schedule:
-      -cron: '25 10 * * *'
+on:
+  schedule:
+    - cron: '35 13 * * *'
 
-  jobs:
-    build:
-      runs-on:ubuntu-latest
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
 
-  steps:
-    -name: checkout repo
-    uses: actions/checkout@v4
+    steps:
+      - name: checkout repo
+        uses: actions/checkout@v4
 
-    -name: Setup Python
-    uses: actions/setup-python@v5
-    whit:
-      python-version: '3.11'
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
 
-    -name: run script
-    run: python ./main.py
+      - name: run script
+        run: python ./main.py
 
-    -name: commit and push files
-    uses: stefanzweifel/git-auto-commit-action@v5
-      whith:
-        commit_message: Update files
+      - name: commit and push files
+        uses: stefanzweifel/git-auto-commit-action@v5
+        with:
+          commit_message: Update files
     
