--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,7 +1,7 @@
 name: pipeline
 on:
   schedule:
-    - cron: '35 13 * * *'
+    - cron: '10 14 * * *'
 
 jobs:
   build:
@@ -17,6 +17,9 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
+
+      - name: Install dependencies
+        run: pip install requests
 
       - name: run script
         run: python ./main.py
