--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,7 +1,7 @@
 name: pipeline
 on:
   schedule:
-    - cron: '57,02 02,03 * * *'
+    - cron: '58,02 02,03 * * *'
 
 jobs:
   build:
@@ -19,7 +19,8 @@ jobs:
           python-version: '3.11'
 
       - name: Install dependencies
-        run: pip install requests
+        run: pip install requests==2.32.3 pandas==2.0.3 psycopg2==2.9.9 python-decouple==3.8
+
         
 
       - name: run script
